<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:textColor="@color/text_primary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- sort by general -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/general"
            android:textColor="@color/sky_blue"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/geneeral_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/radio_b_Folder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                android:paddingVertical="12dp"
                android:text="@string/folder"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_b_NameAZ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                android:paddingVertical="12dp"
                android:text="@string/name_az"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_b_NameZA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                android:paddingVertical="12dp"
                android:text="@string/name_za"
                android:textSize="16sp" />


        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="#EEEEEE" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/sky_blue"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_time_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/radio_b_Reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                android:paddingVertical="12dp"
                android:text="@string/reminder_time"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_b_ModifiedNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:checked="true"
                android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                android:paddingVertical="12dp"
                android:text="@string/last_modified_new"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_b_ModifiedOld"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                android:paddingVertical="12dp"
                android:text="@string/last_modified_old"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_b_CreatedNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                android:paddingVertical="12dp"
                android:text="@string/creation_time_new"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_b_CreatedOld"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                android:paddingVertical="12dp"
                android:text="@string/creation_time_old"
                android:textSize="16sp" />
        </RadioGroup>
    </LinearLayout>

</ScrollView>
